sign in/up/out function

--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -7,6 +7,9 @@
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
+		<div class="container-fluid bg-light navbar-fixed-top my_top_navbar_div">
+			{% include 'top-navbar.html '%}
+		</div>
 		{% include 'header.html' %}
 		{% include 'navbar.html' %}
 		{% block content %}
