--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -1,4 +1,9 @@
 <nav>
+    <form class="form-inline my-2 my-lg-0" action="{%url 'search_app:searchResult'%}" method="get">
+        {% csrf_token %}
+        <input class="form-control mr-sm-2" typse="search" placeholder="Search" aria-label="Search" name="q">
+        <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
+    </form>
     <ul>
         <li><a href = "{% url 'shop:allProdCat' %}">All Products</a></li>
         {% for cat in links %}
