shopping cart created + add and remove

--- a/search_app/templates/search.html
+++ b/search_app/templates/search.html
@@ -19,7 +19,7 @@
                             src="{{product.image.url}}" alt="{{product.name}}"></a>
 						<div class="card-body">
 							<h4>{{product.name}}</h4>
-							<p>{{€{product.price}}</p>
+							<p>{{product.price}}</p>
 						</div>
 					</div>
 				</div>
