--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -4,6 +4,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="description" content="{% block metadescription %}{% endblock %}">
+	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous">
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
