--- a/search_app/templates/cart.html
+++ b/search_app/templates/cart.html
@@ -99,6 +99,21 @@
 					</tbody>
 				</table>
 				<div class="mx-auto">
+					<form action="" method="POST">
+						{% csrf_token %}
+							<script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+						 data-key="{{ data_key }}"
+								 data-amount="{{ stripe_total }}"
+								 data-name="Perfect Cushion Shop"
+								 data-description="{{ description }}"
+								 data-image="{% static 'images/logo.png' %}"
+								 data-locale="auto"
+								 data-currency="eur"
+								 data-shipping-address="true"
+								 data-billing-address="true"
+								 data-zip-code="true">
+							 </script>
+						</form>
 					<a href="{% url 'shop:allProdCat' %}" class="btn btn-secondary btn-block my_custom_button">Continue Shopping</a>
 				</div>
 			</div>
@@ -106,3 +121,5 @@
 		<br>
 	{% endif %}
 {% endblock %}
+
+	
