--- a/shop/templates/footer.html
+++ b/shop/templates/footer.html
@@ -1,3 +1,3 @@
-<div>
-	<p>&copy; Online Gaming merch. All Rights Reserved.</p>
+<div class = "footer navbar-fixed-bottem my-footer">
+	<p class="text-center">&copy; Online Gaming merch. All Rights Reserved.</p>
 </div>
