--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -12,12 +12,13 @@
 </head>
 <body>
 	<div class="container">
-		{% include 'top-navbar.html '%}
+		<div class="container-fluid bg-light navbar-fixed-top my_top_navbar_div">
+			{% include 'top-navbar.html '%}
+		</div>
 		{% include 'header.html' %}
 		{% include 'navbar.html' %}
 		{% block content %}
 		{% endblock %}
-
 		{% include 'footer.html' %}
 	</div>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
