--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -22,7 +22,11 @@
           <li class="nav-item">
               <a class="nav-link" href="{% url 'cart:cart_detail' %}"><i class="fas fa-shopping-cart"></i>({{item_count}})</a>
           </li>
+
           {% endif %}
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="forums/">Forums</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0" action="{%url 'search_app:searchResult'%}" method="get">
