--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -26,7 +26,7 @@
           {% endif %}
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="forums/">Forums</a>
+          <a class="nav-link" href="{% url 'forum_list' %}">Forums</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0" action="{%url 'search_app:searchResult'%}" method="get">
