some css changes

--- a/shop/templates/shop/product.html
+++ b/shop/templates/shop/product.html
@@ -16,7 +16,7 @@
 			<div class="row">
 				<div class="col-12 col-sm-12 col-md-12 col-lg-6 text-center">
 					<div class="min-width: 18rem;">
-						<img src="{{product.image.url}}" alt="{{product.name}}">
+						<img src="{{product.image.url}}" alt="{{product.name}}" alt="" class="float-left rounded custom_image_product">
 					</div>
 				</div>
 				<div class="col-12 col-sm-12 col-md-12 col-lg-6">
