--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -88,6 +88,10 @@
 	padding-right: 20px;
 }
 
+.custom_image_product {
+	max-width: 500px;
+	max-height: 600px;
+}
 
 
 /****Cart Page****/
@@ -101,7 +105,7 @@
     letter-spacing: .2em;
     background-color: #f8f9fa!important;
 }
-.custom_image {
+.custom_image_cart {
     width: 200px;
     height: 200px;
 }
