--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -1,3 +1,11 @@
+<style>
+	body {
+	  background-image: url('https://cdn.discordapp.com/attachments/711169846443901014/833359524499816478/c7adfe930a1a3f5273f86bc2d5a2b598.png');
+	  background-repeat: no-repeat;
+	  background-attachment: fixed;
+	  background-size: cover;
+	}
+	</style>
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
@@ -27,3 +35,4 @@
 	  
 </body>
 </html>
+</div>
