--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -1,9 +1,7 @@
 <style>
 	body {
-	  background-image: url('https://cdn.discordapp.com/attachments/711169846443901014/833359524499816478/c7adfe930a1a3f5273f86bc2d5a2b598.png');
-	  background-repeat: no-repeat;
-	  background-attachment: fixed;
-	  background-size: cover;
+	  background-image: url('https://cdn.discordapp.com/attachments/711169846443901014/833361767312392283/c7adfe930a1a3f5273f86bc2d5a2b598.png');
+	  background-position: center; background-attachment: fixed; background-origin: padding-box; background-repeat: no-repeat;
 	}
 	</style>
 {% load static %}
