--- a/shop/templates/top-navbar.html
+++ b/shop/templates/top-navbar.html
@@ -7,7 +7,7 @@
                 aria-haspopup="true" aria-expanded="false">{{ user.username }} 
                 <i class="fas fa-user-circle"></i></a>
 				<div class="dropdown-menu dropdown-menu-right">
-					<a href="{% url 'order:order_history' %" class="dropdown-item">Order History</a>
+					<a href="{% url 'order:order_history' %}" class="dropdown-item">Order History</a>
 				</div>
 			</li>
 			<li>
