--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -14,6 +14,7 @@
 	<meta name="description" content="{% block metadescription %}{% endblock %}">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" crossorigin="anonymous">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 	<title>{% block title %}{% endblock %}</title>
 </head>
 <body>
@@ -23,6 +24,9 @@
 		</div>
 		{% include 'header.html' %}
 		{% include 'navbar.html' %}
+
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 		{% block content %}
 		{% endblock %}
 		{% include 'footer.html' %}
