--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -29,7 +29,7 @@
           <a class="nav-link" href="{% url 'forum_list' %}">Forums</a>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0" action="{%url 'search_app:searchResult'%}" method="get">
+      <form class="form-inline my-2 my-lg-0 move_right " action="{%url 'search_app:searchResult'%}" method="get">
         {% csrf_token %}
         <input class="form-control mr-sm-2" typse="search" placeholder="Search" aria-label="Search" name="q">
         <button class="btn btn-secondary my-2 my-sm-0" type="submit">Search</button>
