--- a/shop/templates/shop/category.html
+++ b/shop/templates/shop/category.html
@@ -15,6 +15,42 @@
 	{% endif %}
 {% endblock %}
 {% block content %}
+
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+	<!-- Indicators -->
+	<ol class="carousel-indicators">
+	  <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	  <li data-target="#myCarousel" data-slide-to="1"></li>
+	  <li data-target="#myCarousel" data-slide-to="2"></li>
+	</ol>
+  
+	<!-- Wrapper for slides -->
+	<div class="carousel-inner">
+	  <div class="item active">
+		<img src="https://ih1.redbubble.net/image.1045008986.9106/flat,750x,075,f-pad,750x1000,f8f8f8.jpg" alt="Test 1" class="custom_carousel_image">
+	  </div>
+  
+	  <div class="item">
+		<img src="https://pbs.twimg.com/profile_images/1087124894075236352/O9cDVYG__400x400.jpg" alt="Test 2" class="custom_carousel_image">
+	  </div>
+  
+	  <div class="item">
+		<img src="https://d1nslcd7m2225b.cloudfront.net/Pictures/1024x536/5/3/5/1315535_6_weathering_with_you_56995_crop.jpg" alt="Test 3" class="custom_carousel_image">
+	  </div>
+	</div>
+  
+	<!-- Left and right controls -->
+	<a class="left carousel-control" href="#myCarousel" data-slide="prev">
+	  <span class="glyphicon glyphicon-chevron-left"></span>
+	  <span class="sr-only">Previous</span>
+	</a>
+	<a class="right carousel-control" href="#myCarousel" data-slide="next">
+	  <span class="glyphicon glyphicon-chevron-right"></span>
+	  <span class="sr-only">Next</span>
+	</a>
+  </div>
+
+
 	<!--Breadcrumb navigation-->
 	{% if category %}
 		<div class="row my_row_class">
