--- a/forums/templates/forum_list.html
+++ b/forums/templates/forum_list.html
@@ -1,19 +1,25 @@
 {% extends 'base.html' %}
 {% block title %}forums{% endblock title %}
 {% block content %}
+{% if user.is_authenticated %}
+  <div class="card-footer text-center text-muted"><a href="{% url 'forum_new' %}">+New</a>
+  </div>
+  {% endif %}
   {% for forum in object_list %}
     <div class="card">
       <div class="card-header">
         <span class="font-weight-bold">{{ forum.title }}</span> &middot;
-        <span class="text-muted">by {{ forumuthor }} | {{ arforumate }}</span>
+        <span class="text-muted">by {{ forum.author }} | {{ forum.date }}</span>
       </div>
       <div class="card-body">
         {{ forum.body }}
       </div>
+      {% if user.is_authenticated %}
       <div class="card-footer text-center text-muted">
-        <a href="{% url 'forum_edit' forum.pk %}">Edit</a> |
+        <a href="{% url 'forum_edit' forum.pk %}">Edit</a>
         <a href="{% url 'forum_delete' forum.pk %}">Delete</a>
       </div>
+      {% endif %}
     </div>
     <br />
   {% endfor %}
