--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -37,7 +37,7 @@
 						<br>
 						Your account has been created and it is ready to use.
 						<br>
-                        <a href="{% url 'shop:allProdCat' %}">Continue shopping</a> and enjoy the 
+                        <a href="{% url 'shop:allProdCat' %}" class = "btn btn-secondary">Continue shopping</a> and enjoy the 
                         variety of cushions that we have at the perfect cushion store.
 					</p>
 				</div>
