--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -16,7 +16,7 @@
 				</h1>
 				<br>
 				<p class="text-center">
-					Please click <a href="{% url 'shop:allProdCat' %}">here</a> to continue shopping.
+					Please click <a href="{% url 'shop:allProdCat' %}" class = "btn btn-secondary">here</a> to continue shopping.
 				</p>
 			</div>
 		</div>
