--- a/forums/templates/forum_detail.html
+++ b/forums/templates/forum_detail.html
@@ -6,7 +6,7 @@
     <p>{{ object.body }}</p>
   </div>
 
-  <p><a href="{% url 'forum_edit' forum.pk %}">Edit</a> |
-    <a href="{% url 'forum_delete' forum.pk %}">Delete</a></p>
-  <p>Back to <a href="{% url 'forum_list' %}">All forums</a>.</p>
+  <p><a href="{% url 'forum_edit' forum.pk %}" class = "btn btn-warning">Edit</a> |
+    <a href="{% url 'forum_delete' forum.pk %}" class = "btn btn-danger">Delete</a></p>
+  <p>Back to <a href="{% url 'forum_list' %}" class = "btn btn-primary">All forums</a>.</p>
 {% endblock content %}
