--- a/forums/templates/forum_list.html
+++ b/forums/templates/forum_list.html
@@ -20,6 +20,16 @@
         <a href="{% url 'forum_delete' forum.pk %}" class = "btn btn-danger">Delete</a>
       </div>
       {% endif %}
+      <div class="card-footer">
+        {% for comment in forum.comments.all %}
+          <p>
+            <span class="font-weight-bold">{{ comment.author }} &middot;</span>
+            {{ comment }}
+          </p>
+        {% endfor %}
+      </div>
+
+      
     </div>
     <br />
   {% endfor %}
