--- a/cart/templates/cart.html
+++ b/cart/templates/cart.html
@@ -4,7 +4,7 @@
 	This is the shopping cart page. Proceed to review your items and place the order.
 {% endblock %}
 {% block title %}
-	Cart - Perfect Cushion Store
+	Anime Haven Cart
 {% endblock %}
 {% block content %}
 	{% if not cart_items %}
@@ -16,7 +16,7 @@
 				</h1>
 				<br>
 				<p class="text-center">
-					Please click <a href="{% url 'shop:allProdCat' %}" class = "btn btn-secondary">here</a> to continue shopping.
+					Please click <a href="{% url 'shop:allProdCat' %}">here</a> to continue shopping.
 				</p>
 			</div>
 		</div>
@@ -61,12 +61,12 @@
 									<td>
 										<a href="{% url 'cart:add_cart' cart_item.product.id %}" class="custom_a"><i class="fas fa-plus-circle custom_icon"></i></a>&nbsp;
 										<a href="{% url 'cart:cart_remove' cart_item.product.id %}" class="custom_a"><i class="fas fa-minus-circle custom_icon"></i></a>&nbsp;
-										<a href="" class="custom_icon"><i class="fas fa-trash-alt custom_icon"></i></a>
+										<a href="{% url 'cart:full_remove' cart_item.product.id %}" class="custom_icon"><i class="fas fa-trash-alt custom_icon"></i></a>
 									</td>
 								{% else %}
 									<td>
 										&nbsp;<a href="{% url 'cart:cart_remove' cart_item.product.id %}" class="custom_a"><i class="fas fa-minus-circle custom_icon"></i></a>&nbsp;
-										<a href="" class="custom_icon"><i class="fas fa-trash-alt custom_icon"></i></a>
+										<a href="{% url 'cart:full_remove' cart_item.product.id %}" class="custom_icon"><i class="fas fa-trash-alt custom_icon"></i></a>
 									</td>
 									<td></td>
 								{% endif %}
@@ -142,7 +142,7 @@
 								 data-amount="{{ stripe_total }}"
 								 data-name="Anime Haven"
 								 data-description="{{ description }}"
-								 data-image="{% static 'images/logo.jpg' %}"
+								 data-image="{% static 'images/logo.png' %}"
 								 data-locale="auto"
 								 data-currency="eur"
 								 data-shipping-address="true"
