--- a/accounts/templates/signup.html
+++ b/accounts/templates/signup.html
@@ -2,10 +2,10 @@
 {% load static %}
 {% load crispy_forms_tags %}
 {% block metadescription %}
-	Sign up to get a new account with us. The perfect cushion store has a variety of stunning and comfy cushions.
+	Sign up to get a new account with us.
 {% endblock %}
 {% block title %}
-	Create a New Account - Perfect Cushion Store
+	Create a New Account - Anime Haven
 {% endblock %}
 {% block content %}
 	<div>
@@ -37,8 +37,7 @@
 						<br>
 						Your account has been created and it is ready to use.
 						<br>
-                        <a href="{% url 'shop:allProdCat' %}" class = "btn btn-secondary">Continue shopping</a> and enjoy the 
-                        variety of cushions that we have at the perfect cushion store.
+                        <a href="{% url 'shop:allProdCat' %}" class = "btn btn-secondary">Continue shopping</a> and enjoy our collection of anime and manga products.
 					</p>
 				</div>
 			</div>
